# workflows-testbed-python

./: .editorconfig  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile.build  Dockerfile.build.dockerignore  Dockerfile.prod  README.md  Taskfile.yml  entrypoint.sh  hardcoding.json  init.sh  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: bitbucket-mirror.yaml  build-and-publish.yaml  grype-image-scan-dispatched.yaml  grype-image-scan-published.yaml  grype-sbom-scan.yaml  poetry-audit.yaml  trivy-fs-audit.yaml  trivy-image-scan-dispatched.yaml  trivy-image-scan-published.yaml  trunk.yaml
.trunk/: trunk.yaml
app/: app.py  main.py
github-private/: dependabot.yml
github-private/workflows/: bitbucket-mirror.yaml  gitleaks.yaml  semgrep.yaml  trivy-config-audit.yaml
github-public/workflows/: codeql-analysis-go.yaml  codeql-analysis-java.yaml  codeql-analysis-javascript.yaml  codeql-analysis-python.yaml
tests/: test_addition.py  test_database.py  test_multiplication.py  test_web_server.py
